server is now fixed to the server, client is also now connected to a fixed address

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,8 @@
     <h1>Messaging App</h1>
     <hr>
     <p id="connection-status">STATUS: Disconnected</p>
-    <p>IP <input id="ip-input" type="text"></p>
-    <p>PORT <input id="port-input" type="text"></p>
+    <!--<p>IP <input id="ip-input" type="text"></p>
+    <p>PORT <input id="port-input" type="text"></p>-->
     <button id="connect-button">Connect</button>
     <button id="disconnect-button">Disconnect</button>
     <hr>
